# EvalPolFusion

./: .gitignore  README.md  requirements.txt
baseline/: dataset.py  predict-torch.py  predict-yolo.py  predict.py  pyproject.toml  run_all.sh  test.py  train-torch.py  train-yolo.py  train.py
baseline/src/bottleseg/data/: bottle.py
baseline/src/bottleseg/models/: __init__.py
fusion/: README.md
fusion/configs/: potatoMultiModalityDIF.yaml  potatoMultiModalityPOL.yaml  potatoMultiModalityRGB.yaml  potatoMultiModalityRGBA.yaml  potatoMultiModalityRGBAD.yaml  potatoMultiModalityRGBD.yaml  potatoMultiModalityRGBPOL.yaml
fusion/semseg/datasets/: __init__.py  potato_multi_modality.py
fusion/semseg/models/: __init__.py  cmnext.py  mmsformer.py
fusion/semseg/models/backbones/: __init__.py  cmnext.py  mmsformer.py
fusion/tools/: infer_mm.py  inference.py  train_mm.py  val_mm.py
utils/: adjust_masks.py  check_input_mcubes.py  check_input_potato.py  extract_from_raw.py  mk_totest.py  reformat_masks.py  remove_seg.py  rename_masks.py  sam_annotation.py  select_and_crop_masks.py  split_dataset.py  view_images.py  visualize_img.py
utils/pimage_lib/: pimage.py
